# dwarf-p-cloudsc

./: .gitignore  AUTHORS.md  CMakeLists.txt  DEPENDENCIES  README.md  VERSION.cmake  bologna_build_and_run_python_driver.sh  bundle.yml  cloudsc-bundle  mac_build_and_run_python_driver.sh  plot_timings.py  project_summary.cmake
src/: CMakeLists.txt  cloudsc_dwarf.F90  makefile
src/.module/: diag_mod.mod  diff_mod.mod  expand_mod.mod  parkind1.mod  surface_fields_mix.mod  timer_mod.mod  yoecldp.mod  yoephli.mod  yoethf.mod  yomcst.mod  yomct0.mod  yomct3.mod  yomdim.mod  yomdyn.mod  yomjfh.mod  yomlun.mod  yomlun_ifsaux.mod  yommp0.mod  yomphy2.mod  yomphyder.mod
src/auxiliary/: run.gprof
src/cloudsc/: cloudsc_in.F90  cuadjtq.F90
src/cloudsc_acc_cuda/: CMakeLists.txt  cloudsc_c_k_caching.cu  cloudsc_c_k_caching.h  cloudsc_c_k_caching_mod.F90
src/cloudsc_acc_sycl/: .cloudsc_c_k_caching.cu.swp  CMakeLists.txt  cloudsc_c_k_caching.cpp  cloudsc_c_k_caching.kernel  cloudsc_driver_mod.F90  dwarf_cloudsc_gpu.F90  load_state.h
src/cloudsc_c/: CMakeLists.txt  dwarf_cloudsc.c
src/cloudsc_c/cloudsc/: cloudsc_c.c  (+15 more)
src/cloudsc_cross/: CMakeLists.txt  cloudsc_c_k_caching.cpp  cloudsc_c_k_caching.h  cloudsc_c_k_caching_mod.F90  cloudsc_driver_mod.F90  testing.F90
src/cloudsc_cuda/: CMakeLists.txt  dwarf_cloudsc.cpp  dwarf_cloudsc_hoist.cpp
src/cloudsc_cuda_sp/: CMakeLists.txt
src/cloudsc_cuf_loki/: CMakeLists.txt  cloudsc_cuf_loki.config  cuf_cloudsc_driver_loki_mod.F90
src/cloudsc_fortran/: CMakeLists.txt  cloudsc.F90  cloudsc_driver_field_mod.F90  cloudsc_driver_mod.F90  cloudsc_global_state_mod.F90  dwarf_cloudsc.F90
src/cloudsc_fortran2/: cloudsc.F90
src/cloudsc_fortran_atlas/: CMakeLists.txt  cloudsc.F90  cloudsc_driver_mod.F90  cloudsc_global_atlas_state_mod.F90  dwarf_cloudsc_atlas.F90  expand_atlas_mod.F90  validate_atlas_mod.F90
src/cloudsc_fortran_pyiface/: CMakeLists.txt
src/cloudsc_fortran_pythoninterface/: CMakeLists.txt  cloudsc_data.py  dwarfdriver.py
src/cloudsc_gpu/: CMakeLists.txt  cloudsc.claw.gpu.F90  cloudsc.scc.F90  cloudsc.scc_hoist.F90  cloudsc_acc_kernels_mod.F90  cloudsc_driver_gpu_acc_scc_v2_mod.F90  cloudsc_driver_gpu_claw_mod.F90  cloudsc_driver_gpu_kernels_mod.F90  cloudsc_driver_gpu_naive_mod.F90  cloudsc_driver_gpu_omp_scc_dr_loop_mod.F90  cloudsc_driver_gpu_omp_scc_hoist_dr_loop_mod.F90  cloudsc_driver_gpu_omp_scc_hoist_mod.F90  cloudsc_driver_gpu_omp_scc_k_caching_dr_loop_mod.F90  cloudsc_driver_gpu_omp_scc_k_caching_mod.F90  cloudsc_driver_gpu_omp_scc_mod.F90  cloudsc_driver_gpu_omp_scc_raw_stack_mod.F90  cloudsc_driver_gpu_omp_scc_stack_mod.F90  cloudsc_driver_gpu_omp_scc_stackv2_mod.F90  cloudsc_driver_gpu_omp_scc_stackv3_mod.F90  cloudsc_driver_gpu_omp_scc_stackv4_mod.F90  cloudsc_driver_gpu_scc_cuf_k_caching_mod.F90  cloudsc_driver_gpu_scc_cuf_mod.F90  cloudsc_driver_gpu_scc_dblk_k_caching_mod.F90  cloudsc_driver_gpu_scc_dblk_mod.F90  cloudsc_driver_gpu_scc_field_async_mod.F90  cloudsc_driver_gpu_scc_field_mod.F90  cloudsc_driver_gpu_scc_hoist_mod.F90  cloudsc_driver_gpu_scc_hoist_mod.F90.ptrs  cloudsc_driver_gpu_scc_k_caching_mod.F90  cloudsc_driver_gpu_scc_mod.F90  cloudsc_driver_gpu_scc_stack_mod.F90  cloudsc_driver_std_par_scc_k_caching_mod.F90  cloudsc_driver_std_par_scc_mod.F90  cloudsc_global_state_mod.F90  cloudsc_gpu_acc_scc_v2_mod.F90  cloudsc_gpu_omp_scc_dr_loop_mod.F90  cloudsc_gpu_omp_scc_hoist_dr_loop_mod.F90  cloudsc_gpu_omp_scc_hoist_mod.F90  cloudsc_gpu_omp_scc_k_caching_dr_loop_mod.F90  cloudsc_gpu_omp_scc_k_caching_mod.F90  (+18 more)
src/cloudsc_gpu_atlas/: CMakeLists.txt  cloudsc.F90  cloudsc_driver_mod.F90  cloudsc_driver_scc_hoist_mod.F90  cloudsc_driver_scc_mod.F90  cloudsc_global_atlas_state_mod.F90  dwarf_cloudsc_atlas.F90  dwarf_cloudsc_gpu.F90  expand_atlas_mod.F90  nlev_mod.F90  validate_atlas_mod.F90
src/cloudsc_hip/: .CMakeLists.txt.swp  Backup.txt  CMakeLists.txt  dwarf_cloudsc.cpp
src/cloudsc_hip_sp/: CMakeLists.txt
src/cloudsc_loki/: CMakeLists.txt  cloudsc.F90  cloudsc_cuf_loki.config  cloudsc_driver_field_loki_mod.F90  cloudsc_driver_field_mod.F90  cloudsc_driver_loki_mod.F90  cloudsc_global_state_mod.F90  cloudsc_init.F90  cloudsc_loki.config  cloudsc_loki_field_offload.config  cloudsc_loki_omp.config  cuf_cloudsc.F90  cuf_cloudsc_driver_loki_mod.F90  dwarf_cloudsc.F90  stack_mod.F90
src/cloudsc_loki_c/: CMakeLists.txt  cloudsc.F90  cloudsc_driver_loki_mod.F90  cloudsc_loki.config  dwarf_cloudsc.F90
src/cloudsc_loki_c_modified/: CMakeLists.txt  cloudsc.F90  cloudsc_cuf_loki.config  cloudsc_driver_loki_mod.F90  cloudsc_init_seq.F90  cloudsc_init_vec.F90  cloudsc_loki.config  dwarf_cloudsc.F90
src/cloudsc_loki_modified/: CMakeLists.txt  claw_cloudsc.config  cloudsc.F90  cloudsc_cuf_loki.config  cloudsc_init_seq.F90  cloudsc_init_vec.F90  cloudsc_loki.config  cuf_cloudsc.F90  cuf_cloudsc_driver_loki_mod.F90
src/cloudsc_mix/: CMakeLists.txt  cloudsc_c_k_caching_mod.F90  cloudsc_driver_mod.F90  dwarf_cloudsc_gpu.F90
src/cloudsc_omp_hip/: CMakeLists.txt  cloudsc_c_k_caching.cpp  cloudsc_c_k_caching_mod.F90  cloudsc_driver_mod.F90  dwarf_cloudsc_gpu.F90  load_state.cpp
src/cloudsc_pyiface/: CMakeLists.txt  LICENSE  README.md  kind_map  pyproject.toml  run_python_driven_cloudsc.sh  setup.cfg  setup.py
src/cloudsc_python/: .pre-commit-config.yaml  CMakeLists.txt  README.md  bootstrap_venv.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
src/cloudsc_sycl/: Backup_CMakeLists.txt  CMakeLists.txt  CUDA_CMakeLists.txt  dpcpp_CMakeLists.txt  dwarf_cloudsc.cpp  opensycl_CMakeLists.txt
src/cloudsc_sycl_sp/: CMakeLists.txt  dwarf_cloudsc.cpp
src/common/: CMakeLists.txt
src/ifs-pyifaces/: CMakeLists.txt  LICENSE  README.md  setup.cfg  setup.py
src/include/: cloud_layer.intfb.h  cloudsc_driver.intfb.h  dotprod3.intfb.h
src/prototype1/: CMakeLists.txt  cloudsc_dwarf.F90
src/prototype2/: CMakeLists.txt  dwarf_cloudsc.F90
src/prototype3/: CMakeLists.txt  dwarf_cloudsc.c
src/support/: diag_mod.F90  surface_fields_mix.F90  yoecldp.F90  yomdim.F90  yomdyn.F90
(+517 files in other folders)
